[package]
name = "rust-knihovna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true # Link Time Optimization (LTO)

[dependencies]
actix-web = "3"
actix-http = "2.2.2"
actix-files = "0.5.0"
tera = "1.15.0"
env_logger = "0.9.0"

